// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspection: Kingbase BIT(1) round trips as a Prisma Boolean through the driver adapter: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model kingbase_bit_boolean {
  id    Int     @id @default(autoincrement())
  value Boolean @db.Bit(1)
}
"
`;

exports[`introspection: Kingbase BIT(1) round trips as a Prisma Boolean through the driver adapter: warnings 1`] = `null`;

exports[`introspection: Kingbase native MySQL types supported by Prisma Client round trip through the driver adapter: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model kingbase_native_types {
  id              Int      @id @default(autoincrement())
  tiny_bool       Boolean
  tiny_int        Int      @db.TinyInt
  medium_int      Int      @db.MediumInt
  bits            Bytes    @db.Bit(8)
  binary_value    Bytes    @db.VarBinary(3)
  blob_value      Bytes    @db.Blob
  text_value      String   @db.TinyText
  year_value      Int      @db.Year
  date_value      DateTime @db.Date
  time_value      DateTime @db.Time(3)
  datetime_value  DateTime
  timestamp_value DateTime @db.Timestamp(3)
  json_value      Json
}
"
`;

exports[`introspection: Kingbase native MySQL types supported by Prisma Client round trip through the driver adapter: warnings 1`] = `null`;

exports[`introspection: Kingbase raw queries preserve literal and comment question marks: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model kingbase_raw_queries {
  id    Int    @id @default(autoincrement())
  value String @db.VarChar(50)
}
"
`;

exports[`introspection: Kingbase raw queries preserve literal and comment question marks: warnings 1`] = `null`;

exports[`introspection: create bigint data: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model migrate {
  version BigInt @id
}
"
`;

exports[`introspection: create bigint data: warnings 1`] = `null`;

exports[`introspection: create with data: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt @id @default(autoincrement())
  name String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: create with data: warnings 1`] = `null`;

exports[`introspection: create with empty data and SQL default: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt @id @default(autoincrement())
  name String @default("alice") @db.VarChar(50)
}
"
`;

exports[`introspection: create with empty data and SQL default: warnings 1`] = `null`;

exports[`introspection: delete where composite PK: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@id([name, key])
}
"
`;

exports[`introspection: delete where composite PK: warnings 1`] = `null`;

exports[`introspection: delete where composite unique: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt @id @default(autoincrement())
  email String @db.VarChar(50)
  name  String @db.VarChar(50)

  @@unique([email, name])
}
"
`;

exports[`introspection: delete where composite unique: warnings 1`] = `null`;

exports[`introspection: deleteMany where enum - check count: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt          @id @default(autoincrement())
  title     String          @db.VarChar(50)
  published posts_published @default(DRAFT)
}

enum posts_published {
  DRAFT
  PUBLISHED
}
"
`;

exports[`introspection: deleteMany where enum - check count: warnings 1`] = `null`;

exports[`introspection: deleteMany where enum - check findMany: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt          @id @default(autoincrement())
  title     String          @db.VarChar(50)
  published posts_published @default(DRAFT)
}

enum posts_published {
  DRAFT
  PUBLISHED
}
"
`;

exports[`introspection: deleteMany where enum - check findMany: warnings 1`] = `null`;

exports[`introspection: findMany - default enum: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt          @id @default(autoincrement())
  title     String          @db.VarChar(50)
  published posts_published @default(DRAFT)
}

enum posts_published {
  DRAFT
  PUBLISHED
}
"
`;

exports[`introspection: findMany - default enum: warnings 1`] = `null`;

exports[`introspection: findMany - email text: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt  @id @default(autoincrement())
  email String? @db.Text
}
"
`;

exports[`introspection: findMany - email text: warnings 1`] = `null`;

exports[`introspection: findMany - email varchar(50) not null unique: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt @id @default(autoincrement())
  email String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: findMany - email varchar(50) not null unique: warnings 1`] = `null`;

exports[`introspection: findMany orderBy asc: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt  @id @default(autoincrement())
  title     String  @db.VarChar(50)
  published Boolean @default(false)
}
"
`;

exports[`introspection: findMany orderBy asc: warnings 1`] = `null`;

exports[`introspection: findMany orderBy desc: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt  @id @default(autoincrement())
  title     String  @db.VarChar(50)
  published Boolean @default(false)
}
"
`;

exports[`introspection: findMany orderBy desc: warnings 1`] = `null`;

exports[`introspection: findMany where OR[contains, contains] : datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt  @id @default(autoincrement())
  title     String  @db.VarChar(50)
  published Boolean @default(false)
}
"
`;

exports[`introspection: findMany where OR[contains, contains] : warnings 1`] = `null`;

exports[`introspection: findMany where contains and boolean: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt  @id @default(autoincrement())
  title     String  @db.VarChar(50)
  published Boolean @default(false)
}
"
`;

exports[`introspection: findMany where contains and boolean: warnings 1`] = `null`;

exports[`introspection: findMany where contains: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model crons {
  id        BigInt  @id @default(autoincrement())
  job       String  @unique @db.VarChar(50)
  frequency String? @db.Text
}
"
`;

exports[`introspection: findMany where contains: warnings 1`] = `null`;

exports[`introspection: findMany where datetime exact: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime exact: warnings 1`] = `null`;

exports[`introspection: findMany where datetime gt: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime gt: warnings 1`] = `null`;

exports[`introspection: findMany where datetime gte: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime gte: warnings 1`] = `null`;

exports[`introspection: findMany where datetime lt: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime lt: warnings 1`] = `null`;

exports[`introspection: findMany where datetime lte - check instanceof Date: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id         BigInt   @id @default(autoincrement())
  title      String   @db.VarChar(50)
  created_at DateTime @default(now()) @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime lte - check instanceof Date: warnings 1`] = `null`;

exports[`introspection: findMany where datetime lte: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime lte: warnings 1`] = `null`;

exports[`introspection: findMany where datetime not: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where datetime not: warnings 1`] = `null`;

exports[`introspection: findMany where decimal: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model exercises {
  id       BigInt  @id @default(autoincrement())
  distance Decimal @db.Decimal(5, 3)
}
"
`;

exports[`introspection: findMany where decimal: warnings 1`] = `null`;

exports[`introspection: findMany where empty in[]: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    BigInt @id @default(autoincrement())
  token Int    @unique
  name  String @db.VarChar(50)
}
"
`;

exports[`introspection: findMany where empty in[]: warnings 1`] = `null`;

exports[`introspection: findMany where empty notIn[]: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    BigInt @id @default(autoincrement())
  token Int    @unique
  name  String @db.VarChar(50)
}
"
`;

exports[`introspection: findMany where empty notIn[]: warnings 1`] = `null`;

exports[`introspection: findMany where endsWith: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model crons {
  id        BigInt  @id @default(autoincrement())
  job       String  @unique @db.VarChar(50)
  frequency String? @db.Text
}
"
`;

exports[`introspection: findMany where endsWith: warnings 1`] = `null`;

exports[`introspection: findMany where id empty in[] and token in[]: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    BigInt @id @default(autoincrement())
  token Int    @unique
  name  String @db.VarChar(50)
}
"
`;

exports[`introspection: findMany where id empty in[] and token in[]: warnings 1`] = `null`;

exports[`introspection: findMany where in[integer]: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    BigInt @id @default(autoincrement())
  token Int    @unique
  name  String @db.VarChar(50)
}
"
`;

exports[`introspection: findMany where in[integer]: warnings 1`] = `null`;

exports[`introspection: findMany where in[string]: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model crons {
  id        BigInt  @id @default(autoincrement())
  job       String  @unique @db.VarChar(50)
  frequency String? @db.Text
}
"
`;

exports[`introspection: findMany where in[string]: warnings 1`] = `null`;

exports[`introspection: findMany where notIn[]: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    BigInt @id @default(autoincrement())
  token Int    @unique
  name  String @db.VarChar(50)
}
"
`;

exports[`introspection: findMany where notIn[]: warnings 1`] = `null`;

exports[`introspection: findMany where null: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model events {
  id   BigInt    @id @default(autoincrement())
  time DateTime? @db.DateTime(0)
}
"
`;

exports[`introspection: findMany where null: warnings 1`] = `null`;

exports[`introspection: findMany where startsWith: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model crons {
  id        BigInt  @id @default(autoincrement())
  job       String  @unique @db.VarChar(50)
  frequency String? @db.Text
}
"
`;

exports[`introspection: findMany where startsWith: warnings 1`] = `null`;

exports[`introspection: findMany where timestamp gt than now: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id         BigInt   @id @default(autoincrement())
  title      String   @db.VarChar(50)
  created_at DateTime @default(dbgenerated("'now()'")) @db.Timestamp(0)
}
"
`;

exports[`introspection: findMany where timestamp gt than now: warnings 1`] = `null`;

exports[`introspection: findMany where timestamp gte than now: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id         BigInt   @id @default(autoincrement())
  title      String   @db.VarChar(50)
  created_at DateTime @default(dbgenerated("'now()'")) @db.Timestamp(0)
}
"
`;

exports[`introspection: findMany where timestamp gte than now: warnings 1`] = `null`;

exports[`introspection: findMany where timestamp lt than now: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id         BigInt   @id @default(autoincrement())
  title      String   @db.VarChar(50)
  created_at DateTime @default(dbgenerated("'now()'")) @db.Timestamp(0)
}
"
`;

exports[`introspection: findMany where timestamp lt than now: warnings 1`] = `null`;

exports[`introspection: findMany where unique: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt @id @default(autoincrement())
  email String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: findMany where unique: warnings 1`] = `null`;

exports[`introspection: findUnique where PK with include: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id      BigInt @id @default(autoincrement())
  user_id BigInt
  title   String @db.VarChar(50)
  users   users  @relation(fields: [user_id], references: [id], onDelete: NoAction)
}

model users {
  id    BigInt  @id @default(autoincrement())
  email String  @unique @db.VarChar(50)
  posts posts[]
}
"
`;

exports[`introspection: findUnique where PK with include: warnings 1`] = `null`;

exports[`introspection: findUnique where PK with select: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    Int    @id
  name  String @unique @db.VarChar(50)
  email String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: findUnique where PK with select: warnings 1`] = `null`;

exports[`introspection: findUnique where PK: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   Int    @id
  name String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: findUnique where PK: warnings 1`] = `null`;

exports[`introspection: findUnique where composite PK with foreign key: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model a {
  one Int
  two Int
  b   b[]

  @@id([one, two])
}

model b {
  id  BigInt @id @default(autoincrement())
  one Int
  two Int
  a   a      @relation(fields: [one, two], references: [one, two], onDelete: NoAction, onUpdate: NoAction)
}
"
`;

exports[`introspection: findUnique where composite PK with foreign key: warnings 1`] = `null`;

exports[`introspection: findUnique where composite PK: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@id([name, key])
}
"
`;

exports[`introspection: findUnique where composite PK: warnings 1`] = `null`;

exports[`introspection: findUnique where composite unique: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt @id @default(autoincrement())
  email String @db.VarChar(50)
  name  String @db.VarChar(50)

  @@unique([email, name])
}
"
`;

exports[`introspection: findUnique where composite unique: warnings 1`] = `null`;

exports[`introspection: findUnique where decimal: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model exercises {
  id       BigInt  @id @default(autoincrement())
  distance Decimal @unique @db.Decimal(5, 3)
}
"
`;

exports[`introspection: findUnique where decimal: warnings 1`] = `null`;

exports[`introspection: findUnique where unique composite (PK is a composite): datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@id([name, key])
  @@unique([value, email])
}
"
`;

exports[`introspection: findUnique where unique composite (PK is a composite): warnings 1`] = `null`;

exports[`introspection: findUnique where unique composite: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  id    BigInt @id @default(autoincrement())
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@unique([name, key])
}
"
`;

exports[`introspection: findUnique where unique composite: warnings 1`] = `null`;

exports[`introspection: findUnique where unique with foreign key and unpack: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id      BigInt @id @default(autoincrement())
  user_id BigInt
  title   String @db.VarChar(50)
  users   users  @relation(fields: [user_id], references: [id], onDelete: NoAction)
}

model users {
  id    BigInt  @id @default(autoincrement())
  email String  @unique @db.VarChar(50)
  posts posts[]
}
"
`;

exports[`introspection: findUnique where unique with foreign key and unpack: warnings 1`] = `null`;

exports[`introspection: findUnique where unique: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt @id @default(autoincrement())
  email String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: findUnique where unique: warnings 1`] = `null`;

exports[`introspection: interactive transaction rolls back: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String @db.VarChar(50)
}
"
`;

exports[`introspection: interactive transaction rolls back: warnings 1`] = `null`;

exports[`introspection: update where composite PK: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@id([name, key])
}
"
`;

exports[`introspection: update where composite PK: warnings 1`] = `null`;

exports[`introspection: update where composite unique: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model users {
  id    BigInt @id @default(autoincrement())
  email String @db.VarChar(50)
  name  String @db.VarChar(50)

  @@unique([email, name])
}
"
`;

exports[`introspection: update where composite unique: warnings 1`] = `null`;

exports[`introspection: update where integer data: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id    BigInt @id @default(autoincrement())
  token Int    @unique
}
"
`;

exports[`introspection: update where integer data: warnings 1`] = `null`;

exports[`introspection: update where with boolean data and select: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id     BigInt  @id @default(autoincrement())
  name   String  @unique @db.VarChar(50)
  active Boolean @default(true)
}
"
`;

exports[`introspection: update where with boolean data and select: warnings 1`] = `null`;

exports[`introspection: update where with boolean data: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id     BigInt  @id @default(autoincrement())
  name   String  @unique @db.VarChar(50)
  active Boolean @default(true)
}
"
`;

exports[`introspection: update where with boolean data: warnings 1`] = `null`;

exports[`introspection: update where with numeric data: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt @id @default(autoincrement())
  name String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: update where with numeric data: warnings 1`] = `null`;

exports[`introspection: update where with string data: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt @id @default(autoincrement())
  name String @unique @db.VarChar(50)
}
"
`;

exports[`introspection: update where with string data: warnings 1`] = `null`;

exports[`introspection: update with data - not null enum - check findMany: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt          @id @default(autoincrement())
  title     String          @db.VarChar(50)
  published posts_published @default(DRAFT)
}

enum posts_published {
  DRAFT
  PUBLISHED
}
"
`;

exports[`introspection: update with data - not null enum - check findMany: warnings 1`] = `null`;

exports[`introspection: update with data - not null enum: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt          @id @default(autoincrement())
  title     String          @db.VarChar(50)
  published posts_published @default(DRAFT)
}

enum posts_published {
  DRAFT
  PUBLISHED
}
"
`;

exports[`introspection: update with data - not null enum: warnings 1`] = `null`;

exports[`introspection: updateMany where null - check findMany: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt  @id @default(autoincrement())
  name String? @db.Text
}
"
`;

exports[`introspection: updateMany where null - check findMany: warnings 1`] = `null`;

exports[`introspection: updateMany where with string data - check findMany: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt @id @default(autoincrement())
  name String @db.VarChar(50)
}
"
`;

exports[`introspection: updateMany where with string data - check findMany: warnings 1`] = `null`;

exports[`introspection: updateMany where with string data - check returned count: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model teams {
  id   BigInt @id @default(autoincrement())
  name String @db.VarChar(50)
}
"
`;

exports[`introspection: updateMany where with string data - check returned count: warnings 1`] = `null`;

exports[`introspection: updateMany with data - not null enum - check count: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt          @id @default(autoincrement())
  title     String          @db.VarChar(50)
  published posts_published @default(DRAFT)
}

enum posts_published {
  DRAFT
  PUBLISHED
}
"
`;

exports[`introspection: updateMany with data - not null enum - check count: warnings 1`] = `null`;

exports[`introspection: upsert (create): datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt  @id @default(autoincrement())
  title     String  @db.VarChar(50)
  published Boolean @default(false)
}
"
`;

exports[`introspection: upsert (create): warnings 1`] = `null`;

exports[`introspection: upsert (update): datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model posts {
  id        BigInt  @id @default(autoincrement())
  title     String  @db.VarChar(50)
  published Boolean @default(false)
}
"
`;

exports[`introspection: upsert (update): warnings 1`] = `null`;

exports[`introspection: upsert where composite PK - create: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@id([name, key])
}
"
`;

exports[`introspection: upsert where composite PK - create: warnings 1`] = `null`;

exports[`introspection: upsert where composite PK - update: datamodel 1`] = `
"generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource db {
  provider = "kingbase-mysql"
}

model variables {
  name  String @db.VarChar(50)
  key   String @db.VarChar(50)
  value String @db.VarChar(50)
  email String @db.VarChar(50)

  @@id([name, key])
}
"
`;

exports[`introspection: upsert where composite PK - update: warnings 1`] = `null`;
